# amr_bot

./: .gitignore  CMakeLists.txt  frames_2025-02-15_17.43.41.gv  frames_2025-03-12_14.47.07.gv  frames_2025-03-28_16.43.04.gv  frames_2025-03-28_16.53.19.gv  frames_2025-04-11_17.14.45.gv  frames_2025-05-21_12.18.27.gv  frames_2025-05-28_19.09.51.gv  output.urdf  package.xml  test.urdf
install/: local_setup.sh  setup.sh
install/amr_bot/share/amr_bot/: package.bash  package.zsh
install/amr_controller/lib/amr_controller/: simple_controller
install/amr_controller/share/amr_controller/: package.sh
install/amr_controller/share/amr_controller/launch/: controller_launch.py  teleop_joystick.launch.py
install/amr_cpp_examples/share/ament_index/resource_index/package_run_dependencies/: amr_cpp_examples
install/amr_cpp_examples/share/ament_index/resource_index/parent_prefix_path/: amr_cpp_examples
install/amr_cpp_examples/share/amr_cpp_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amr_cpp_examples/share/amr_cpp_examples/cmake/: amr_cpp_examplesConfig-version.cmake  amr_cpp_examplesConfig.cmake
install/amr_cpp_examples/share/amr_cpp_examples/environment/: ament_prefix_path.dsv  path.dsv
install/amr_description/share/ament_index/resource_index/package_run_dependencies/: amr_description
install/amr_description/share/ament_index/resource_index/parent_prefix_path/: amr_description
install/amr_description/share/amr_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/amr_description/share/amr_description/cmake/: amr_descriptionConfig-version.cmake  amr_descriptionConfig.cmake
install/amr_description/share/amr_description/environment/: ament_prefix_path.dsv  path.dsv
install/amr_description/share/amr_description/launch/: display_fixed.launch.py  gazebo.launch.py
install/amr_description/share/amr_description/urdf/: amr.urdf.xacro  amr_gazebo.xacro  amr_ros2_control.xacro
install/amr_py_examples/lib/amr_py_examples/: simple_publisher  simple_subscriber
install/amr_py_examples/share/amr_py_examples/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/amr_bringup/: CMakeLists.txt  package.xml
src/amr_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/amr_controller/amr_controller/: noisy_controller.py  simple_controller.py  twist_relay.py
src/amr_controller/config/: amr_controllers.yaml  controller.yaml  joy_config.yaml  joy_teleop.yaml  slam.yaml  twist_mux_joy.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml
src/amr_controller/install/: local_setup.sh  setup.sh
src/amr_controller/launch/: controller.launch.py  controller_launch.py  joystick_teleop.launch.py  slam.launch.py
src/amr_controller/log/: latest_build
src/amr_cpp_examples/: CMakeLists.txt  package.xml
src/amr_description/: CMakeLists.txt  package.xml  setup.py
src/amr_description/install/: local_setup.sh  setup.sh
src/amr_description/install/amr_description/share/amr_description/: package.sh  package.xml
src/amr_description/launch/: display_fixed.launch.py  gazebo.launch.py
src/amr_description/log/: latest_build
src/amr_description/models/gazebo_ros2_control/: model.config  model.sdf
src/amr_description/rviz/: amr.rviz  amr_rviz.rviz
src/amr_description/urdf/: amr.urdf.xacro  amr_gazebo.xacro  amr_ros2_control.xacro
src/amr_localization/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/amr_localization/amr_localization/: imu_republisher.py  kalman_filter.py  odometry_motion_model.py
src/amr_localization/config/: amcl.yaml  ekf.yaml
src/amr_localization/launch/: global_localization.launch.py  local_localization.launch.py
src/amr_localization/rviz/: odometry_motion_model.rviz
src/amr_mapping/: CMakeLists.txt  package.xml  setup.py
src/amr_mapping/amr_mapping/: mapping_with_known_poses.py
src/amr_mapping/launch/: slam.launch.py
src/amr_msgs/: CMakeLists.txt  package.xml
src/amr_py_examples/: package.xml  setup.cfg  setup.py
src/amr_py_examples/amr_py_examples/: simple_action_client.py  simple_action_server.py  simple_lifecycle_node.py  simple_parameter.py  simple_publisher.py  simple_qos_publisher.py  simple_qos_subscriber.py  simple_service_client.py  simple_service_server.py  simple_subscriber.py  simple_tf_kinematics.py  simple_turtlesim_kinematics.py
src/amr_sensors/: package.xml  setup.py
src/amr_sensors/amr_sensors/: front_lidar_reader.py
src/amr_utils/: CMakeLists.txt  package.xml
src/amr_utils/amr_utils/: safety_stop.py
src/install/: local_setup.sh  setup.sh
src/install/amr_controller/lib/amr_controller/: controller_node
src/install/amr_controller/share/amr_controller/: package.sh  package.xml
src/install/amr_controller/share/amr_controller/config/: controller_config.yaml  joy_config.yaml
src/install/amr_controller/share/amr_controller/launch/: controller_launch.py
src/log/: latest_build
