<?xml version="1.0"?>
<package format="3">
  <name>amr_bot</name>
  <version>0.0.1</version>
  <description>A ROS 2 package for the AMR robot</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies -->
  <depend>rclcpp</depend>  <!-- ROS 2 client library for C++ -->
  <depend>std_msgs</depend> <!-- Common ROS 2 messages -->
  <depend>geometry_msgs</depend> <!-- For robot control and transformations -->
  <depend>sensor_msgs</depend> <!-- For sensor-related messages -->
  <depend>controller_manager</depend> <!-- For controlling your robot's hardware -->
  <depend>gazebo_ros</depend> <!-- If you're using Gazebo for simulation -->
  <depend>robot_state_publisher</depend> <!-- For publishing robot's state -->
  
  <!-- If you are using any other specific packages, add them here -->
</package>
